[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/Roboto-Light.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://videos/8.webm" type="VideoStream" id=2]
[ext_resource path="res://Seq4.gd" type="Script" id=3]
[ext_resource path="res://TextDisplay2.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=1]
size = 43
font_data = ExtResource( 1 )

[node name="Seq4" type="HBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -270.0
margin_right = 960.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 960.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 955.0
margin_bottom = 535.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[fill][/fill]"
scroll_active = false
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoPlayer" type="VideoPlayer" parent="."]
margin_left = 960.0
margin_right = 1920.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
stream = ExtResource( 2 )
autoplay = true

[node name="TextTimer" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]

[connection signal="clicked" from="PanelContainer/RichTextLabel" to="." method="_on_RichTextLabel_clicked"]
[connection signal="mouse_entered" from="PanelContainer/RichTextLabel" to="PanelContainer/RichTextLabel" method="_on_RichTextLabel_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/RichTextLabel" to="PanelContainer/RichTextLabel" method="_on_RichTextLabel_mouse_exited"]
[connection signal="finished" from="VideoPlayer" to="." method="_on_VideoPlayer_finished"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
